--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
     <header class="bg-white shadow-md">
       <div class="container mx-auto flex justify-between items-center p-4">
         <div class="flex items-center space-x-2">
-          <img src="c2-assets/logo-header.png" alt="Logo" class="h-8" />
-          <span class="text-lg font-bold text-green-600">FreshMart</span>
+          <img src="c2-assets/logo-header.png" alt="Logo-header" class="h-8" />
         </div>
         <nav class="hidden md:flex space-x-6">
-          <a href="#" class="text-gray-600 hover:text-green-600">Home</a>
-          <a href="#" class="text-gray-600 hover:text-green-600">Services</a>
-          <a href="#" class="text-gray-600 hover:text-green-600">Products</a>
-          <a href="#" class="text-gray-600 hover:text-green-600">Contact</a>
+          <a href="#" class="text-[#111111] hover:text-green-700">Home</a>
+          <a href="#" class="text-[#111111] hover:text-green-700">Services</a>
+          <a href="#" class="text-[#111111] hover:text-green-700">Products</a>
+          <a href="#" class="text-[#111111] hover:text-green-700">Contact</a>
         </nav>
         <button
           class="bg-green-600 text-white px-4 py-2 rounded-md shadow-md hover:bg-green-700"
         >
           Login
+        </button>
+        <button
+          class="bg-[#FFFFFF]text-[##111111] px-4 py-2 rounded-md shadow-md hover:bg-green-700"
+        >
+          Register
         </button>
       </div>
     </header>
@@ -32,7 +36,7 @@
     <section class="bg-gray-50 text-center py-12">
       <div class="container mx-auto">
         <h1 class="text-4xl font-bold text-gray-800">
-          Freshness You Can <span class="text-green-600">Count On</span>, Prices
+          Freshness You Can <span class="text-[#179800]">Count On</span>, Prices
           You’ll Love!
         </h1>
         <p class="text-gray-500 mt-4">
@@ -51,14 +55,14 @@
     <!-- Services Section -->
     <div class="bg-white py-12">
       <div class="max-w-7xl mx-auto">
-        <h2 class="text-2xl font-bold text-green-700 mb-6">Services</h2>
+        <h2 class="text-2xl font-bold text-[#179800] mb-6">Services</h2>
         <div class="flex justify-between gap-8">
           <div
             class="bg-gray-50 rounded-2xl p-8 shadow-lg flex flex-col items-center"
           >
             <img
               src="c2-assets/service.png"
-              alt="24/7 Services"
+              alt="Services"
               class="w-16 h-16 mb-4"
             />
             <h3 class="text-xl font-bold text-gray-800">24/7 Services</h3>
@@ -72,7 +76,7 @@
           >
             <img
               src="c2-assets/delivery.png"
-              alt="Fast Delivery"
+              alt="Delivery"
               class="w-16 h-16 mb-4"
             />
             <h3 class="text-xl font-bold text-gray-800">Fast Delivery</h3>
@@ -86,7 +90,7 @@
           >
             <img
               src="c2-assets/healthy.png"
-              alt="Healthy Products"
+              alt="Healthy"
               class="w-16 h-16 mb-4"
             />
             <h3 class="text-xl font-bold text-gray-800">Healthy Products</h3>
@@ -102,17 +106,17 @@
     <!-- Popular Products Section -->
     <section class="bg-gray-150 py-12">
       <div class="max-w-7xl mx-auto">
-        <h2 class="text-2xl font-bold text-green-700 mb-6">Popular Products</h2>
+        <h2 class="text-2xl font-bold text-[#179800] mb-6">Popular Products</h2>
         <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
           <!-- Offer Card -->
-          <div class="bg-green-100 rounded-2xl p-6 shadow-lg">
-            <h3 class="text-2xl font-bold text-green-700">30% off</h3>
-            <p class="text-gray-500 mt-4">
+          <div class="bg-[#179800] rounded-2xl p-6 shadow-lg">
+            <h3 class="text-2xl font-bold text-[#FFFFFF]">30% off</h3>
+            <p class="text-[#111111] mt-4">
               Discover a world of treats, toys, and essentials handpicked for
               you.
             </p>
             <button
-              class="bg-green-700 text-white font-bold py-2 px-5 rounded-full hover:bg-green-80 mt-6"
+              class="bg-[#FFFFFF] text-[#111111] font-bold py-2 px-5 rounded-full hover:bg-green-80 mt-6"
             >
               Buy Now
             </button>
@@ -133,7 +137,7 @@
             >
               <img
                 src="c2-assets/onion.png"
-                alt="Onion 1 KG"
+                alt="Onion"
                 class="w-18 h-19 mb-3"
               />
               <div class="text-center">
@@ -149,7 +153,7 @@
             >
               <img
                 src="c2-assets/tomato.png"
-                alt="Tomato 500g"
+                alt="Tomato"
                 class="w-20 h-20 mb-3"
               />
               <div class="text-center">
@@ -165,7 +169,7 @@
             >
               <img
                 src="c2-assets/potato.png"
-                alt="Potato 1 KG"
+                alt="Potato"
                 class="w-18 h-19 mb-3"
               />
               <div class="text-center">
@@ -181,7 +185,7 @@
             >
               <img
                 src="c2-assets/onion.png"
-                alt="Onion 500g"
+                alt="Onion"
                 class="w-18 h-19 mb-3"
               />
               <div class="text-center">
@@ -197,7 +201,7 @@
             >
               <img
                 src="c2-assets/tomato.png"
-                alt="Tomato 1 KG"
+                alt="Tomato"
                 class="w-18 h-19 mb-3"
               />
               <div class="text-center">
@@ -213,7 +217,7 @@
             >
               <img
                 src="c2-assets/potato.png"
-                alt="Potato 500g"
+                alt="Potato"
                 class="w-18 h-19 mb-3"
               />
               <div class="text-center">
@@ -229,7 +233,7 @@
             >
               <img
                 src="c2-assets/onion.png"
-                alt="Onion 1 KG"
+                alt="Onion"
                 class="w-18 h-19 mb-3"
               />
               <div class="text-center">
@@ -245,7 +249,7 @@
             >
               <img
                 src="c2-assets/tomato.png"
-                alt="Tomato 500g"
+                alt="Tomato"
                 class="w-18 h-19 mb-3"
               />
               <div class="text-center">
@@ -262,20 +266,20 @@
     <!-- Arrival & Offers Section -->
     <section class="bg-gray-100 py-12">
       <div class="max-w-7xl mx-auto">
-        <h2 class="text-2xl font-bold text-green-700 mb-6">Arrival & Offers</h2>
+        <h2 class="text-2xl font-bold text-[#179800] mb-6">Arrival & Offers</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
           <!-- Offer 1 -->
           <div
-            class="bg-green-900 rounded-xl p-6 shadow-lg flex items-center relative"
+            class="bg-[#115414] rounded-xl p-6 shadow-lg flex items-center relative"
           >
             <div class="flex flex-col justify-center ml-4">
               <img
                 src="c2-assets/dawat-logo.png"
-                alt="Daawat Logo"
+                alt="Daawat"
                 class="w-25 mb-4"
               />
               <p
-                class="text-green-100 font-medium text-sm bg-green-700 px-4 py-1 rounded-full w-fit mb-2"
+                class="text-green-100 font-medium text-sm bg-[#63B76D] px-5 py-3 rounded-full w-fit mb-2"
               >
                 Cook Exotic Dishes
               </p>
@@ -284,32 +288,32 @@
             <div class="ml-auto">
               <img
                 src="c2-assets/dawat-mock-up.png"
-                alt="Daawat Rice Offer"
+                alt="Rice"
                 class="w-auto h-auto"
               />
             </div>
           </div>
           <!-- Offer 2 -->
           <div
-            class="bg-blue-900 rounded-xl p-6 shadow-lg flex items-center relative"
+            class="bg-[#102861] rounded-xl p-6 shadow-lg flex items-center relative"
           >
             <div class="flex flex-col justify-center ml-4">
               <img
                 src="c2-assets/india-gate-logo.png"
-                alt="India Gate Logo"
+                alt="gate-logo"
                 class="w-24 mb-4"
               />
               <p
-                class="text-blue-100 font-medium text-sm bg-blue-700 px-4 py-1 rounded-full w-fit mb-2"
+                class="text-blue-100 font-medium text-sm bg-[#2A4D97] px-5 py-3 rounded-full w-fit mb-2"
               >
-                No.1 Rice
+                World's No.1 Rice
               </p>
               <p class="text-white text-3xl font-bold">UP to 40% OFF</p>
             </div>
             <div class="ml-auto">
               <img
                 src="c2-assets/india-gate-mock-up.png"
-                alt="India Gate Rice Offer"
+                alt="Offer"
                 class="w-auto h-auto"
               />
             </div>
@@ -339,7 +343,7 @@
                 class="p-3 rounded-l-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-500"
               />
               <button
-                class="bg-light bg-green-900 text-white px-6 py-3 rounded-r-lg"
+                class="bg-light bg-[#179800] text-white px-6 py-3 rounded-r-lg"
               >
                 Subscribe
               </button>
@@ -349,13 +353,13 @@
       </div>
 
       <!-- Footer Section -->
-      <footer class="bg-green-700 text-white py-12">
+      <footer class="bg-[#179800] text-white py-12">
         <div class="max-w-7xl mx-auto grid grid-cols-4 gap-8">
           <!-- Brand Info -->
           <div>
             <img
               src="c2-assets/logo-footer.png"
-              alt="Nature's Platter Logo"
+              alt="Nature's Logo"
               class="w-24 h-24 mb-4"
             />
             <p class="text-sm">
@@ -374,30 +378,17 @@
               <li>Beverages</li>
             </ul>
           </div>
-
-          <!-- Services Links -->
-          <div>
-            <h3 class="font-bold mb-4">Services</h3>
-            <ul class="space-y-2 text-sm">
-              <li>24/7 Support</li>
-              <li>Fast Delivery</li>
-              <li>Healthy Products</li>
-              <li>Special Offers</li>
-            </ul>
-          </div>
-
-          <!-- Contact Info -->
           <div>
             <h3 class="font-bold mb-4">Follow us</h3>
             <div class="flex space-x-4 mt-4">
               <img
                 src="c2-assets/facebook.jpg"
                 alt="Facebook"
-                class="w-6 h-6"
+                class="w-7 h-7"
               />
-              <img src="c2-assets/inta.jpg" alt="Insta" class="w-6 h-6" />
-              <img src="c2-assets/linkdin.png" alt="linkdin" class="w-6 h-6" />
-              <img src="c2-assets/youtube.png" alt="Y-Tube" class="w-6 h-6" />
+              <img src="c2-assets/inta.jpg" alt="Insta" class="w-7 h-7" />
+              <img src="c2-assets/linkdin.png" alt="linkdin" class="w-7 h-7" />
+              <img src="c2-assets/youtube.png" alt="Y-Tube" class="w-7 h-7" />
             </div>
           </div>
         </div>
