another update of codes

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
           <img src="c2-assets/logo-header.png" alt="Logo-header" class="h-8" />
         </div>
         <nav class="hidden md:flex space-x-6">
-          <a href="#" class="text-[#111111] hover:text-green-700">Home</a>
-          <a href="#" class="text-[#111111] hover:text-green-700">Services</a>
-          <a href="#" class="text-[#111111] hover:text-green-700">Products</a>
-          <a href="#" class="text-[#111111] hover:text-green-700">Contact</a>
+          <a href="" class="text-[#111111] hover:text-red-700">Home</a>
+          <a href="" class="text-[#111111] hover:text-red-700">Services</a>
+          <a href="" class="text-[#111111] hover:text-red-700">Products</a>
+          <a href="" class="text-[#111111] hover:text-red-700">Contact</a>
         </nav>
-        <button
-          class="bg-green-600 text-white px-4 py-2 rounded-md shadow-md hover:bg-green-700"
+        <!-- <button
+          class="bg-[#179800] text-white px-7 py-3 rounded-md shadow-md hover:bg-green-700"
         >
           Login
-        </button>
+        </button> -->
         <button
-          class="bg-[#FFFFFF]text-[##111111] px-4 py-2 rounded-md shadow-md hover:bg-green-700"
+          class="bg-[#FFFFFF]text-[##111111] px-7 py-3 rounded-md shadow-md hover:bg-green-700"
         >
           Register
         </button>
@@ -35,11 +35,11 @@
     <!-- Hero Section -->
     <section class="bg-gray-50 text-center py-12">
       <div class="container mx-auto">
-        <h1 class="text-4xl font-bold text-gray-800">
-          Freshness You Can <span class="text-[#179800]">Count On</span>, Prices
+        <h1 class="text-4xl font-bold text-[#111111]">
+          Freshness <span class="text-[#179800]">You Can Count On</span>, Prices
           You’ll Love!
         </h1>
-        <p class="text-gray-500 mt-4">
+        <p class="text-[#5D5360] mt-4">
           Bring quality, affordable grocery products to your family.
         </p>
         <div class="mt-6">
@@ -66,9 +66,9 @@
               class="w-16 h-16 mb-4"
             />
             <h3 class="text-xl font-bold text-gray-800">24/7 Services</h3>
-            <p class="text-gray-600 mt-2 text-center">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt.
+            <p class="text-[#5D5360] mt-2 text-center">
+              This is a 24/7 service option where every one can get there
+              Services whenever they need that service for relate.
             </p>
           </div>
           <div
@@ -80,9 +80,9 @@
               class="w-16 h-16 mb-4"
             />
             <h3 class="text-xl font-bold text-gray-800">Fast Delivery</h3>
-            <p class="text-gray-600 mt-2 text-center">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt.
+            <p class="text-[#5D5360] mt-2 text-center">
+              This is the delivary service, where everyone can get there
+              purchase things from here to indentify there items.
             </p>
           </div>
           <div
@@ -94,9 +94,9 @@
               class="w-16 h-16 mb-4"
             />
             <h3 class="text-xl font-bold text-gray-800">Healthy Products</h3>
-            <p class="text-gray-600 mt-2 text-center">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt.
+            <p class="text-[#5D5360] mt-2 text-center">
+              They can get some healthy items from here where they get some
+              multiple items from here to purchase new things every time.
             </p>
           </div>
         </div>
@@ -360,11 +360,12 @@
             <img
               src="c2-assets/logo-footer.png"
               alt="Nature's Logo"
-              class="w-24 h-24 mb-4"
+              class="w-26 h-27 mb-4"
             />
             <p class="text-sm">
               Discover a world of treats, toys, and essentials handpicked for
-              your furry friends.
+              your furry friends. and descover more things into the website. to
+              get to know.
             </p>
           </div>
 
