another updated codes

--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
           <a href="" class="text-[#111111] hover:text-red-700">Products</a>
           <a href="" class="text-[#111111] hover:text-red-700">Contact</a>
         </nav>
-        <!-- <button
-          class="bg-[#179800] text-white px-7 py-3 rounded-md shadow-md hover:bg-green-700"
-        >
-          Login
-        </button> -->
-        <button
-          class="bg-[#FFFFFF]text-[##111111] px-7 py-3 rounded-md shadow-md hover:bg-green-700"
-        >
-          Register
-        </button>
+        <div>
+          <button
+            class="bg-[#179800] text-white px-8 py-3 rounded-md shadow-md hover:bg-green-700"
+          >
+            Login
+          </button>
+          <button
+            class="bg-[#FFFFFF]text-[##111111] px-8 py-3 rounded-md shadow-md hover:bg-green-700"
+          >
+            Register
+          </button>
+        </div>
       </div>
     </header>
 
@@ -63,7 +65,7 @@
             <img
               src="c2-assets/service.png"
               alt="Services"
-              class="w-16 h-16 mb-4"
+              class="w-12 h-12 sm:w-16 sm:h-16 mb-4"
             />
             <h3 class="text-xl font-bold text-gray-800">24/7 Services</h3>
             <p class="text-[#5D5360] mt-2 text-center">
@@ -77,9 +79,11 @@
             <img
               src="c2-assets/delivery.png"
               alt="Delivery"
-              class="w-16 h-16 mb-4"
+              class="w-12 h-12 sm:w-16 sm:h-16 mb-4"
             />
-            <h3 class="text-xl font-bold text-gray-800">Fast Delivery</h3>
+            <h3 class="text-lg sm:text-xl font-bold text-gray-800">
+              Fast Delivery
+            </h3>
             <p class="text-[#5D5360] mt-2 text-center">
               This is the delivary service, where everyone can get there
               purchase things from here to indentify there items.
@@ -329,7 +333,7 @@
           <img
             src="c2-assets/vegetable-busket.png"
             alt="Grocery Basket"
-            class="w-48 h-48 rounded-lg"
+            class="w-55 h-55 rounded-lg"
           />
           <div class="ml-8">
             <h2 class="text-2xl font-bold text-gray-800">Get Grocery News!</h2>
@@ -353,7 +357,7 @@
       </div>
 
       <!-- Footer Section -->
-      <footer class="bg-[#179800] text-white py-12">
+      <footer class="bg-[#179800] text-white py-10 -mt-40">
         <div class="max-w-7xl mx-auto grid grid-cols-4 gap-8">
           <!-- Brand Info -->
           <div>
