--- a/index.html
+++ b/index.html
@@ -20,13 +20,34 @@
           <a href="" class="text-[#111111] hover:text-red-700">Contact</a>
         </nav>
         <div class="flex gap-5 items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-  <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
-</svg>
-<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-</svg>
-
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+            />
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+            />
+          </svg>
 
           <button
             class="bg-[#179800] text-white px-7 py-3 rounded-md shadow-md hover:bg-green-700"
@@ -335,65 +356,63 @@
     </section>
 
     <!-- Newsletter Section -->
-     <section class="relative z-10 lg:ml-30 lg:mr-30 font-[Sora] mt-30 -mb-20 rounded-xl bg-white">
-    <div class="-m-200 bg-gray-100">
-      <div class="max-w-7xl mx-auto p-8">
-        <div class="bg-white rounded-2xl shadow-lg flex items-center p-8">
-          <img
-            src="c2-assets/vegetable-busket.png"
-            alt="Grocery Basket"
-            class="w-55 h-55 rounded-lg"
-          />
-          <div class="ml-8">
-            <h2 class="text-2xl font-bold text-gray-800">Get Grocery News!</h2>
-            <p class="text-gray-600">
-              Exclusive training tips, tricks, product deals and more.
-            </p>
-            <div class="mt-4 flex">
-              <input
-                type="email"
-                placeholder="Enter email..."
-                class="p-3 rounded-l-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-500"
-              />
-              <button
-                class="bg-light bg-[#179800] text-white px-6 py-3 rounded-r-lg"
-              >
-                Subscribe
-              </button>
-            </div>
-          </div>
+    <section
+      class="relative z-10 lg:ml-30 lg:mr-30 font-[Sora] mt-30 -mb-50 rounded-xl bg-white"
+    >
+      <div
+        class="flex flex-col lg:flex-row items-center gap-40 pl-30 bg-white rounded-2xl ml-40"
+      >
+        <div>
+          <img src="c2-assets/vegetable-busket.png" alt="vegetable" />
+        </div>
+        <div class="flex flex-col gap-5">
+          <h2 class="font-bold text-3xl">Get Grocery News!</h2>
+          <p>Exclusive training tips, ticks, product deals and more.</p>
+          <input type="email" placeholder="Enter email...." />
+          <button
+            class="font-[Sora] bg-[#179800] text-black px-4 py-2 rounded-md hover:bg-yellow-700 mt-3 w-40"
+          >
+            Subscribe
+          </button>
         </div>
       </div>
     </section>
 
-      <!-- Footer Section -->
-     <footer class="bg-[#179800] pt-20 pl-30 pr-30 font-[Sora] pb-18">
-            <div class="flex flex-col lg:flex-row justify-between">
-            <div class="flex flex-col gap-4">
-                <div class="flex gap-5 items-center">
-                    <img src="c2-assets/logo-footer.png" alt="footer-logo">
-                </div>
-                <div>
-                    <p class="w-80 h-20 opacity-[0.7] mb-5">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
-                </div>
-            </div>
-            <div class="mb-5">
-                <ul class="flex flex-col gap-4">
-                    <li><a href="">Product</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Contact us</a></li>
-                  </ul>
-            </div>
-            <div class="flex flex-col gap-4 mt-8">
-                <p>Follow Us</p>
-                <div class="flex gap-4">
-                    <img class="w-8 h-8" src="c2-assets/facebook.png" alt="facebook-logo">
-                    <img class="w-8 h-8" src="c2-assets/insta.png" alt="instagram">
-                    <img class="w-8 h-8" src="c2-assets/linkdin.png" alt="Linkdin">
-                    <img class="w-8 h-8" src="c2-assets/youtube.png" alt="Youtube">
-                </div>
-            </div>
+    <!-- Footer Section -->
+    <footer class="bg-[#179800] pt-20 pl-30 pr-30 font-[Sora] pb-18">
+      <div class="flex flex-col lg:flex-row justify-between">
+        <div class="flex flex-col gap-4">
+          <div class="flex gap-5 items-center">
+            <img src="c2-assets/logo-footer.png" alt="footer-logo" />
+          </div>
+          <div>
+            <p class="w-80 h-20 opacity-[0.7] mb-5">
+              Discover a world of treats, toys, and essentials handpicked for
+              your furry friends
+            </p>
+          </div>
         </div>
-        </footer>
+        <div class="mb-5">
+          <ul class="flex flex-col gap-4">
+            <li><a href="">Product</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Contact us</a></li>
+          </ul>
+        </div>
+        <div class="flex flex-col gap-4 mt-8">
+          <p>Follow Us</p>
+          <div class="flex gap-4">
+            <img
+              class="w-8 h-8"
+              src="c2-assets/facebook.png"
+              alt="facebook-logo"
+            />
+            <img class="w-8 h-8" src="c2-assets/insta.png" alt="instagram" />
+            <img class="w-8 h-8" src="c2-assets/linkdin.png" alt="Linkdin" />
+            <img class="w-8 h-8" src="c2-assets/youtube.png" alt="Youtube" />
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
